Fix whitespace bug

--- a/day1/css/style.css
+++ b/day1/css/style.css
@@ -4,14 +4,6 @@ body {
 	margin: 0;
 }
 
-/**,
-*::before,
-*::after {
-	margin: 0;
-	padding: 0;
-	box-sizing: inherit;
-}*/
-
 html {
 	font-size: 62.5%;
 	box-sizing: border-box;
